--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+  <nav>
+    <li><%= link_to "Log in", login_path %></li>
+  </nav>
+
   <%= render 'shared/flash_messages' %>
 
   <%= yield %>
