--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -26,5 +26,5 @@
     <%= f.text_area :detail, rows: 10, placeholder: "Please enter a detailed description" %>
   </p>
 
-  <%= f.submit %>
+  <%= f.submit class: 'button small round' %>
 <% end %>
