--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,11 @@
 <% flash.each do |name, msg| %>
-  <p><%= msg %></p>
+  <% if msg.is_a?(String) %>
+    <div data-alert class="alert-box <%= foundation_alert_type(name) %> round rails-flash">
+      <%= msg %>
+      <%= link_to("x", "#", class: 'close') %>
+    </div>
+  <% end %>
+<% end %>
+<% if flash.empty? %>
+  <div class='alert-empty'></div>
 <% end %>
