--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Tickets</h1>
 
-<%= link_to "New Ticket", new_ticket_path %>
+<%= link_to "New Ticket", new_ticket_path, class: 'button small round' %>
