--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,12 +1,14 @@
 <% if object.errors.any? %>
   <div id="error_explanation">
-    <div class="alert alert-error">
-      The form contains <%= pluralize(object.errors.count, "error") %>.
+    <div class="">
+      <strong>
+        The form contains <%= pluralize(object.errors.count, "error") %>.
+      </strong>
     </div>
-    <ul>
+<!--     <ul>
       <% object.errors.full_messages.each do |msg| %>
         <li>* <%=msg %></li>
       <% end %>
     </ul>
-  </div>
+ -->  </div>
 <% end %>
