Display tickets in correct views
- closed tickets (completed & cancelled)
- on-hold
- newly unassigned (awaiting staff but not assigned)
  no concept of assigned at this point
- open

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,13 +1,5 @@
 <h1>Tickets</h1>
 
-<div class='row'>
-  <ul id='all-tickets'>
-    <% @tickets.each do |t| %>
-      <li><%= link_to t.reference_id, ticket_path(t.reference_id) %></li>
-    <% end %>
-  </ul>
-</div>
-
 <dl class='tabs' data-tab>
   <dd class='active'><a href="#panel-1">New Unassigned Tickets</a></dd>
   <dd><a href="#panel-2">Open Tickets</a></dd>
@@ -16,31 +8,37 @@
 </dl>
 <div class='tabs-content'>
   <div class='content active' id='panel-1'>
-    <h2 class='label'>New unassigned tickets</h2>
-    <li>
-    </li>
-    <li>
-    </li>
+    <p>These are tickets not yet assigned to a staff member.</p>
+    <% @tickets.waiting_staff_response.each do |t| %>
+      <li>
+        <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      </li>
+    <% end %>
   </div>
   <div class='content' id='panel-2'>
-    <h2>Open Tickets</h2>
-    <li>
-    </li>
+    <% @tickets.awaiting_customer.each do |t| %>
+      <li>
+        <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      </li>
+    <% end %>
   </div>
   <div class='content' id='panel-3'>
-    <h2>On-hold Tickets</h2>
-    <li>
-    </li>
-    <li>
-    </li>
+    <% @tickets.on_hold.each do |t| %>
+      <li>
+        <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      </li>
+    <% end %>
   </div>
   <div class='content' id='panel-4'>
-    <h2>Closed Tickets</h2>
-    <li>
-    </li>
-    <li>
-    </li>
+    <% ( @tickets.completed + @tickets.cancelled ).each do |t| %>
+      <li>
+        <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      </li>
+    <% end %>
   </div>
 </div>
 
 <%= link_to "New Ticket", new_ticket_path, class: 'button small round' %>
+
+
+
