Show a count of each type of ticket on the tabs
- add some styling for display
- remove default li styling
- add additional scopes
- add helper to style with content_tag the labels

--- a/app/views/tickets/_ticket_tabs.html.erb
+++ b/app/views/tickets/_ticket_tabs.html.erb
@@ -1,8 +1,8 @@
 <dl class='tabs' data-tab>
-  <dd class='active'><a href="#panel-1">New Unassigned Tickets</a></dd>
-  <dd><a href="#panel-2">Open Tickets</a></dd>
-  <dd><a href="#panel-3">On-hold Tickets</a></dd>
-  <dd><a href="#panel-4">Closed Tickets</a></dd>
+  <dd class='active'><a href="#panel-1">New Unassigned Tickets <%= count_unassigned %></a></dd>
+  <dd><a href="#panel-2">Open Tickets <%= count_open %></a></dd>
+  <dd><a href="#panel-3">On-hold Tickets <%= count_on_hold %></a></dd>
+  <dd><a href="#panel-4">Closed Tickets <%= count_closed %></a></dd>
 </dl>
 <div class='tabs-content'>
   <%= render 'new_unassigned' %>
