--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the tickets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+span.label.counter {
+  background-color: #EDEC8C;
+  color: black;
+  border: 1px solid #DEDB35;
+  margin-right: 10px;
+  padding: 6px;
+
+}
