--- a/app/views/tickets/_new_unassigned.html.erb
+++ b/app/views/tickets/_new_unassigned.html.erb
@@ -2,7 +2,12 @@
   <p>These are tickets not yet assigned to a staff member.</p>
   <% @tickets.waiting_staff_response.each do |t| %>
     <li>
-      <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      <div class='small-4 columns'>
+        <%= link_to t.reference_id, ticket_path(t.reference_id) %>
+      </div>
+      <div class='small-8 columns right'>
+        <span class='label secondary'><%= t.subject %></span>
+      </div>
     </li>
   <% end %>
 </div>
