Move towards original brief for customer
- customer can enter tickets from within website
- to me means display the normal site with maybe a link
  for creating new tickets not required but a customer contact page?

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,2 @@
-<li><%= link_to "Log in", login_path %></li>
+<li class='right'><%= link_to "Log in", login_path %></li>
+<li class='right'><%= link_to "New Ticket", new_ticket_path %></li>
